--- a/index.html
+++ b/index.html
@@ -1,511 +1,79 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERP題庫測驗系統</title>
-    <style>
-        /* 基本樣式 */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1 {
-            text-align: center;
-            color: #3b5998;
-            margin-top: 20px;
-        }
-        h5 {
-            text-align: center;
-            color: #98a6dd;
-            margin-top: 20px;
-        }
-        .container {
-            width: 90%;
-            max-width: 800px;
-            margin: 0 auto;
-            background: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-top: 20px;
-        }
-
-        .progress-bar {
-            width: 100%;
-            background-color: #e6e6e6;
-            border-radius: 5px;
-            overflow: hidden;
-            margin-bottom: 20px;
-        }
-
-        .progress {
-            height: 20px;
-            background-color: #3b5998;
-            width: 0;
-            transition: width 0.3s ease;
-        }
-
-        .question {
-            margin: 20px 0;
-        }
-
-        .options {
-            margin: 10px 0;
-        }
-
-        .options label {
-            display: block;
-            margin: 5px 0;
-            cursor: pointer;
-        }
-
-        .button-group {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .button {
-            padding: 10px 20px;
-            background-color: #3b5998;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 10px 2px;
-        }
-        .button_qc {
-            padding: 10px 20px;
-            background-color: #dfe1e7;
-            color: #3b5998;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 10px 2px;
-        }
-
-        .button:hover {
-            background-color: #2a4274;
-        }
-
-        .incorrect {
-            background-color: #f8d7da;
-            border-radius: 5px;
-            padding: 10px;
-        }
-
-        .correct-answer {
-            color: green;
-            font-weight: bold;
-        }
-
-        .score {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 18px;
-            color: #333;
-        }
-
-        .history {
-            margin-top: 40px;
-        }
-
-        .history h2 {
-            color: #3b5998;
-        }
-
-        .input-group {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .input-group input {
-            width: 60px;
-            padding: 5px;
-            font-size: 16px;
-            text-align: center;
-        }
-
-        .input-group .button {
-            margin-left: 10px;
-        }
-
-        /* 章節多選清單 */
-        .chapter-select {
-            margin-top: 20px;
-            max-height: 500px;
-            overflow-y: auto;
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: left;
-            display: inline-block;
-            width: 97%;
-        }
-
-        .chapter-select label {
-            display: block;
-            margin: 5px 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ERP題庫測驗系統</title>
+  <!-- 載入外部樣式表 -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>ERP測驗系統</h1>
+  <h1>ERP測驗系統</h1>
 
-<div class="container">
-    <!-- 多選章節區塊 -->
-    <div class="chapter-select" id="chapterSelect">
-        <!-- 1) 新增「全選」checkbox（不放入 chapters） -->
-        <label>
-            <input type="checkbox" id="selectAll" checked>
-            全選
-        </label>
-    </div>
+  <!-- 初始化區塊(主頁面) -->
+  <div class="container" id="mainPage">
+      <!-- 多選章節區塊 -->
+      <div class="chapter-select" id="chapterSelect">
+          <!-- 全選 Checkbox -->
+          <label>
+              <input type="checkbox" id="selectAll" checked>
+              全選
+          </label>
+      </div>
 
-    <div class="input-group">
-        <label for="questionCount" id="questionCountLabel">請輸入題數（1-452）：</label>
-        <input type="number" id="questionCount" min="1" max="452" value="50">
-        <button class="button_qc" id="qc_10">10</button>
-        <button class="button_qc" id="qc_50">50</button>
-        <button class="button_qc" id="qc_100">100</button>
-        <br>
-        <button class="button" id="startBtn">開始測驗</button>
-    </div>
+      <div class="input-group">
+          <label for="questionCount" id="questionCountLabel">請輸入題數（1-452）：</label>
+          <input type="number" id="questionCount" min="1" max="452" value="50">
+          <button class="button_qc" id="qc_10">10</button>
+          <button class="button_qc" id="qc_50">50</button>
+          <button class="button_qc" id="qc_100">100</button>
+          <br>
+          <button class="button" id="startbtn">開始測驗</button>
+          <!-- 回顧所有錯題按鈕 -->
+          <button class="button" id="reviewAllWrongBtn">回顧所有錯題</button>
+      </div>
 
-    <div class="progress-bar" style="display: none;">
-        <div class="progress"></div>
-    </div>
-    <div id="questions"></div>
+      <div class="history">
+          <h2>測驗歷史</h2>
+          <ul id="historyList"></ul>
+      </div>
+  </div>
 
-    <div class="button-group" style="display: none;">
-        <button class="button" id="submitBtn">繳交</button>
-        <button class="button" id="continueBtn" style="display: none;">繼續</button>
-    </div>
-    <div class="score" id="score"></div>
+  <!-- 答題區塊 -->
+  <div class="container hidden" id="quizPage">
+      <div class="progress-bar">
+          <div class="progress"></div>
+      </div>
+      <div id="questions"></div>
+      <div class="button-group">
+          <button class="button" id="submitBtn">繳交</button>
+          <button class="button" id="continueBtn" style="display: none;">繼續</button>
+      </div>
+      <div class="score" id="score"></div>
+  </div>
 
-    <div class="history">
-        <h2>測驗歷史</h2>
-        <ul id="historyList"></ul>
-    </div>
-</div>
-<h5>By CYUT IM Jerry Hsu v2.1.1</h5>
-<script>
+  <!-- 回顧某次測驗的頁面 -->
+  <div class="container hidden" id="reviewPage">
+      <div id="reviewHeader" class="review-header"></div>
+      <button class="button" id="toggleWrongBtn">顯示錯誤題目</button>
+      <div id="reviewQuestions" class="review-container"></div>
+      <div class="button-group">
+          <button class="button" id="backToMainPageBtn">返回初始頁面</button>
+      </div>
+  </div>
 
-    const chapters = [
-        { name: "第一章 企業資源規劃簡介 (5題)", start: 1, end: 5 },
-        { name: "第二章 企業流程管理與ERP (5題)", start: 6, end: 10 },
-        { name: "第三章 銷售與配銷模組 (66題)", start: 11, end: 76 },
-        { name: "第四章 生產規劃與控制 (55題)", start: 77, end: 131 },
-        { name: "第五章 企業之採購管理 (49題)", start: 132, end: 180 },
-        { name: "第六章 庫存管理系統 (84題)", start: 181, end: 264 },
-        { name: "第七章 ERP財務會計模組 (42題)", start: 265, end: 306 },
-        { name: "第八章 成本控制模組 (49題)", start: 307, end: 355 },
-        { name: "第九章 人力資源模組 (32題)", start: 356, end: 387 },
-        { name: "第十章 系統評選 (5題)", start: 388, end: 392 },
-        { name: "第十一章 系統導入 (5題)", start: 393, end: 397 },
-        { name: "第十二章 ERP系統導入的兩個案例 (5題)", start: 398, end: 402 },
-        { name: "第十三章 從ERP到企業數位轉型 (5題)", start: 403, end: 407 },
-        { name: "第十四章 企業雲端運算與應用 (25題)", start: 408, end: 432 },
-        { name: "第十五章 跨章節 (5題)", start: 433, end: 437 },
-        { name: "第十六章 資料庫管理與ERP系統 (15題)", start: 438, end: 452 },
-    ];
+  <!-- 回顧所有錯題的頁面 -->
+  <div class="container hidden" id="allWrongPage">
+      <h2>錯題回顧</h2>
+      <div id="allWrongList"></div>
+      <div class="button-group">
+          <button class="button" id="backToMainPageFromWrong">回上一頁</button>
+      </div>
+  </div>
 
-   
-    let questionBank = {}; 
-    let selectedQuestions = [];    // 存放最終選擇出的題目ID
-    let answers = {};             // 紀錄使用者作答
-    let correctAnswers = {};      // 紀錄正確答案
-    let answeredCount = 0;        // 已回答題數
-    let startTime, endTime;       // 計時
-    let usedQuestions = [];       // 已使用過的題目（跨次測驗）
-    let availableQuestionIDs = [];// 根據所選章節，動態生成可抽取的題目清單
+  <h5>By CYUT IM Jerry Hsu v2.2.1</h5>
 
-
-    const chapterSelectDiv = document.getElementById("chapterSelect");
-    const questionCountInput = document.getElementById("questionCount");
-    const questionCountLabel = document.getElementById("questionCountLabel");
-    const selectAllCheckbox = document.getElementById("selectAll");
-
-    function createChapterSelection() {
-        // 先把「全選」checkbox 放在 HTML 中(程式最上方)
-        // 然後我們再動態加入其他章節的選項
-        chapters.forEach((chap, idx) => {
-            const label = document.createElement("label");
-            const checkbox = document.createElement("input");
-            checkbox.type = "checkbox";
-            checkbox.value = idx;
-            checkbox.checked = true; // 預設全選
-
-            label.appendChild(checkbox);
-            label.appendChild(document.createTextNode(chap.name));
-            chapterSelectDiv.appendChild(label);
-        });
-    }
-
-
-    function updateAvailableQuestionIDs() {
-        // 先清空
-        availableQuestionIDs = [];
-        // 取得所有勾選的章節(不含「全選」)
-        const checkboxes = chapterSelectDiv.querySelectorAll("input[type='checkbox']:not(#selectAll):checked");
-
-        checkboxes.forEach(chk => {
-            const idx = parseInt(chk.value);
-            const chap = chapters[idx];
-            // 將該章節範圍的ID都加入 availableQuestionIDs
-            for (let i = chap.start; i <= chap.end; i++) {
-                // 若尚未被使用過，可視需求排除 usedQuestions。此範例不排除
-                availableQuestionIDs.push(i.toString());
-            }
-        });
-
-        // 更新題數輸入框的 min/max/value
-        const totalCount = availableQuestionIDs.length;
-        questionCountInput.min = 1;
-        questionCountInput.max = totalCount > 0 ? totalCount : 1; // 若全取消，避免 max=0 時出錯
-        questionCountLabel.textContent = `請輸入題數（1-${totalCount}）：`;
-
-        // 預設值改為所選章節題數加總（若全取消則給 1）
-        questionCountInput.value = totalCount > 0 ? totalCount : 1;
-    }
-
-    async function loadQuestions() {
-        try {
-            const response = await fetch("ERPquestion.json");
-            if (!response.ok) {
-                throw new Error("無法讀取題庫");
-            }
-            questionBank = await response.json();
-            document.getElementById("startBtn").disabled = false;
-        } catch (error) {
-            console.error("讀取題庫失敗：", error);
-        }
-    }
-
-    function getRandomQuestions(num) {
-        // 從可用題庫ID中隨機抽取 num 筆
-        const shuffled = availableQuestionIDs.sort(() => Math.random() - 0.5);
-        const selected = shuffled.slice(0, num);
-        usedQuestions = usedQuestions.concat(selected); 
-        return selected;
-    }
-
-
-    function renderQuestions() {
-        const questionsDiv = document.getElementById("questions");
-        questionsDiv.innerHTML = "";
-
-        selectedQuestions.forEach((id, index) => {
-            const q = questionBank[id];
-            if (!q) return;
-
-            const userAnswer = answers[index] || '';
-
-            const questionDiv = document.createElement("div");
-            questionDiv.className = "question";
-            questionDiv.id = "q" + index;
-
-            questionDiv.innerHTML =
-                `<p><strong>${index + 1}. ${q.question}</strong></p>
-                 <div class="options">
-                     <label><input type="radio" name="q${index}" value="A" ${userAnswer === 'A' ? 'checked' : ''}> A. ${q.A}</label>
-                     <label><input type="radio" name="q${index}" value="B" ${userAnswer === 'B' ? 'checked' : ''}> B. ${q.B}</label>
-                     <label><input type="radio" name="q${index}" value="C" ${userAnswer === 'C' ? 'checked' : ''}> C. ${q.C}</label>
-                     <label><input type="radio" name="q${index}" value="D" ${userAnswer === 'D' ? 'checked' : ''}> D. ${q.D}</label>
-                 </div>`;
-            questionsDiv.appendChild(questionDiv);
-        });
-    }
-
-    function updateProgress() {
-        const progress = document.querySelector(".progress");
-        if (selectedQuestions.length === 0) {
-            progress.style.width = '0%';
-            return;
-        }
-        progress.style.width = `${(answeredCount / selectedQuestions.length) * 100}%`;
-    }
-    document.getElementById("qc_10").addEventListener("click", () => {
-        questionCountInput.value = 10;
-    });
-    document.getElementById("qc_50").addEventListener("click", () => {
-        questionCountInput.value = 50;
-    });
-    document.getElementById("qc_100").addEventListener("click", () => {
-        questionCountInput.value = 100;
-    });
-    document.getElementById("startBtn").addEventListener("click", () => {
-        const numQuestions = parseInt(questionCountInput.value);
-
-        // 驗證輸入
-        if (isNaN(numQuestions) || numQuestions < 1 || numQuestions > availableQuestionIDs.length) {
-            alert(`請輸入 1 ~ ${availableQuestionIDs.length} 之間的數字`);
-            return;
-        }
-
-        // 開始抽題
-        selectedQuestions = getRandomQuestions(numQuestions);
-        answers = {};
-        correctAnswers = {};
-        answeredCount = 0;
-
-        // 建立正確答案列表
-        selectedQuestions.forEach((id, index) => {
-            if (questionBank[id]) {
-                correctAnswers[index] = questionBank[id].ans;
-            }
-        });
-
-        // 隱藏章節選擇區塊
-        chapterSelectDiv.style.display = "none";
-
-        // 渲染題目、更新進度條
-        renderQuestions();
-        updateProgress();
-        startTime = new Date();
-
-        // 顯示相關區域
-        document.querySelector(".progress-bar").style.display = "block";
-        document.querySelector(".button-group").style.display = "block";
-        document.getElementById("startBtn").style.display = "none";
-        document.querySelector(".input-group").style.display = "none";
-        document.getElementById("score").innerHTML = "";
-        window.scrollTo({
-            top: 0,       // 回到頁面頂部 
-        });
-    });
-
-
-    document.addEventListener("change", (e) => {
-        if (e.target.matches('input[type="radio"]')) {
-            const questionId = e.target.name.replace("q", "");
-            answers[questionId] = e.target.value;
-            answeredCount = Object.keys(answers).length;
-            updateProgress();
-        }
-    });
-
-    document.getElementById("submitBtn").addEventListener("click", () => {
-        if (Object.keys(answers).length < selectedQuestions.length) {
-            alert("請回答所有題目");
-            return;
-        }
-
-        endTime = new Date();
-        const totalTime = ((endTime - startTime) / 1000).toFixed(2);
-        const avgTime = (totalTime / selectedQuestions.length).toFixed(2);
-
-        // 檢查答案並計算分數
-        let score = 0;
-        selectedQuestions.forEach((id, index) => {
-            const questionDiv = document.getElementById("q" + index);
-            const userAnswer = answers[index];
-            const correctAnswer = correctAnswers[index];
-
-            if (userAnswer === correctAnswer) {
-                score++;
-            } else {
-                questionDiv.classList.add("incorrect");
-                // 標記正確答案
-                const options = questionDiv.querySelectorAll(".options label");
-                options.forEach(label => {
-                    const input = label.querySelector('input');
-                    if (input.value === correctAnswer) {
-                        label.classList.add("correct-answer");
-                    }
-                });
-            }
-        });
-
-        // 顯示分數和時間
-        const scoreDiv = document.getElementById("score");
-        scoreDiv.innerHTML = `你的分數是：${score} / ${selectedQuestions.length}<br>
-                              總用時：${totalTime} 秒，平均每題 ${avgTime} 秒`;
-
-        // 保存成績到 LocalStorage
-        saveHistory(score, selectedQuestions.length, totalTime);
-
-        // 隱藏提交按鈕，顯示繼續按鈕
-        document.getElementById("submitBtn").style.display = "none";
-        document.getElementById("continueBtn").style.display = "inline-block";
-    });
-
-
-    document.getElementById("continueBtn").addEventListener("click", () => {
-        // 顯示章節選擇區塊
-        chapterSelectDiv.style.display = "block";
-
-        document.querySelector(".progress-bar").style.display = "none";
-        document.querySelector(".button-group").style.display = "none";
-        document.getElementById("startBtn").style.display = "inline-block";
-        document.querySelector(".input-group").style.display = "block";
-        document.getElementById("continueBtn").style.display = "none";
-        document.getElementById("submitBtn").style.display = "inline-block";
-        document.getElementById("score").innerHTML = "";
-        document.getElementById("questions").innerHTML = "";
-        window.scrollTo({
-            top: 0,       // 回到頁面頂部 
-        });
-        selectedQuestions = [];
-        answers = {};
-        correctAnswers = {};
-        answeredCount = 0;
-        updateProgress();
-        
-    });
-
-
-    function saveHistory(score, total, time) {
-        const history = JSON.parse(localStorage.getItem("quizHistory")) || [];
-        const date = new Date().toLocaleString();
-        history.push({
-            date,
-            score: `${score} / ${total}`,
-            time: `${time} 秒`
-        });
-        localStorage.setItem("quizHistory", JSON.stringify(history));
-        renderHistory();
-    }
-
-    function renderHistory() {
-        const history = JSON.parse(localStorage.getItem("quizHistory")) || [];
-        const historyList = document.getElementById("historyList");
-        historyList.innerHTML = "";
-        history.forEach(record => {
-            const li = document.createElement("li");
-            li.innerText = `${record.date} - 分數：${record.score}，用時：${record.time}`;
-            historyList.appendChild(li);
-        });
-    }
-
-
-    chapterSelectDiv.addEventListener("change", (e) => {
-        // 若切換的是「全選」checkbox
-        if (e.target.id === "selectAll") {
-            const isChecked = e.target.checked;
-            // 取出所有章節的 checkbox (排除全選本身)
-            const chapterCheckboxes = chapterSelectDiv.querySelectorAll("input[type='checkbox']:not(#selectAll)");
-            chapterCheckboxes.forEach(cb => {
-                cb.checked = isChecked;
-            });
-        }
-        updateAvailableQuestionIDs();
-    });
-
-    document.addEventListener("DOMContentLoaded", () => {
-        // 建立章節清單
-        createChapterSelection();
-        // 讀取題庫
-        loadQuestions();
-        // 更新可用題號與題數範圍
-        updateAvailableQuestionIDs();
-        // 渲染歷史記錄
-        renderHistory();
-        // 預設按鈕先禁用，等題庫載入完再啟用
-        document.getElementById("startBtn").disabled = true;
-    });
-</script>
+  <!-- 載入主程式檔 -->
+  <script src="script.js" defer></script>
 </body>
 </html>
