--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="button-group">
           <button class="button" id="submitBtn">繳交</button>
           <button class="button" id="continueBtn" style="display: none;">繼續</button>
+          <button class="button" id="cancelBtn" style="display: none;">取消</button>
       </div>
       <div class="score" id="score"></div>
   </div>
@@ -71,7 +72,7 @@
       </div>
   </div>
 
-  <h5>By CYUT IM Jerry Hsu v2.2.1</h5>
+  <h5>By CYUT IM Jerry Hsu v2.2.2</h5>
 
   <!-- 載入主程式檔 -->
   <script src="script.js" defer></script>
