--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
   <!-- 初始化區塊(主頁面) -->
   <div class="container" id="mainPage">
+        
       <!-- 多選章節區塊 -->
       <div class="chapter-select" id="chapterSelect">
+            <h3>請選擇章節</h3>
           <!-- 全選 Checkbox -->
           <label>
               <input type="checkbox" id="selectAll" checked>
@@ -71,8 +73,10 @@
           <button class="button" id="backToMainPageFromWrong">回上一頁</button>
       </div>
   </div>
+  
+  <h5>By CYUT IM Jerry Hsu v2.2.4</h5>
+  <h6>Bug Report Email : imyudieok@gmail.com</h6>
 
-  <h5>By CYUT IM Jerry Hsu v2.2.2</h5>
 
   <!-- 載入主程式檔 -->
   <script src="script.js" defer></script>
