--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <div class="container hidden" id="reviewPage">
       <div id="reviewHeader" class="review-header"></div>
       <button class="button" id="toggleWrongBtn">顯示錯誤題目</button>
+      <button class="button" id="ageinWrongBtn">再試一次</button>
       <div id="reviewQuestions" class="review-container"></div>
       <div class="button-group">
           <button class="button" id="backToMainPageBtn">返回初始頁面</button>
@@ -75,7 +76,7 @@
       </div>
   </div>
   
-  <h5>By CYUT IM Jerry Hsu v2.3.2</h5>
+  <h5>By CYUT IM Jerry Hsu v2.4.1</h5>
   <h6>Bug Report Email : imyudieok@gmail.com</h6>
 
 
