--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <button class="button" id="startbtn">開始測驗</button>
       <!-- 回顧所有錯題按鈕 -->
       <button class="button" id="reviewAllWrongBtn">回顧所有錯題</button>
+      <div class="announcement">
+        <p>※公告: v2.5.2 更新黑暗模式，右下角的圓可以切換模式</p>
+        <p>Believe you can and you're halfway there. Must pass the exam.</p>
+      </div>
     </div>
 
     <div class="history">
@@ -76,7 +80,7 @@
     </div>
   </div>
   
-  <h5>By CYUT IM Jerry Hsu v2.5.1</h5>
+  <h5>By CYUT IM Damian Hsu v2.5.2</h5>
   <h6>Bug Report Email : imyudieok@gmail.com</h6>
 
   <!-- 載入主程式檔 -->
