--- a/v2_5_4_stabilze/index.html
+++ b/v2_5_4_stabilze/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="title">ERP測驗系統</h1>
+  <h1>ERP測驗系統</h1>
   <button id="toggleDarkMode" class="button floating-button">B</button>
 
   <!-- 初始化區塊(主頁面) -->
@@ -46,7 +46,7 @@
 
   <!-- 答題區塊 -->
   <div class="container hidden" id="quizPage">
-    <div class="progress-bar" id="progress-bar">
+    <div class="progress-bar">
       <div class="progress"></div>
     </div>
     <div id="questions"></div>
@@ -83,6 +83,5 @@
   <h6>Bug Report Email : imyudieok@gmail.com</h6>
 
   <script src="script.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 </body>
 </html>
