--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>ERP題庫測驗系統</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PT4DH6HKX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4PT4DH6HKX');
+</script>
 <body>
   <h1 id="title">ERP測驗系統</h1>
   <button id="toggleDarkMode" class="button floating-button">B</button>
